--- a/src/css/style.styl
+++ b/src/css/style.styl
@@ -176,6 +176,9 @@ buttonContent()
   buttonContent()
   background-color ignorable
   color            trackerBorder
+  &:hover
+    background-color  pointColor
+    border-color      pointColor
 
   
 cellContent()
