Cleaned up a lot of code

--- a/src/css/style.styl
+++ b/src/css/style.styl
@@ -197,7 +197,7 @@ cellContent()
   webkit-font-smoothing   none
   -webkit-font-smoothing  none
   outline                 none
-  width                   cellWidth  
+  width                   cellWidth * 3 
   
 
 .dropright
